# distributeddatamgr_objectstore

./: CMakeLists.txt  README_zh.md  bundle.json
frameworks/innerkitsimpl/include/adaptor/: client_adaptor.h  distributed_object_impl.h  distributed_objectstore_impl.h  flat_object_storage_engine.h  flat_object_store.h  object_callback.h  object_service.h  object_storage_engine.h  watcher.h
frameworks/innerkitsimpl/include/common/: block_data.h  bytes.h  condition_lock.h  logger.h  string_utils.h
frameworks/innerkitsimpl/include/communicator/: app_data_change_listener.h  app_device_handler.h  app_device_status_change_listener.h  app_pipe_handler.h  app_pipe_mgr.h  app_types.h  ark_communication_provider.h  communication_provider.h  communication_provider_impl.h  process_communicator_impl.h  softbus_adapter.h  visibility.h
frameworks/innerkitsimpl/src/adaptor/: client_adaptor.cpp  distributed_object_impl.cpp  distributed_object_store_impl.cpp  flat_object_storage_engine.cpp  flat_object_store.cpp  object_callback.cpp
frameworks/innerkitsimpl/src/communicator/: app_device_handler.cpp  app_pipe_handler.cpp  app_pipe_mgr.cpp  ark_communication_provider.cpp  communication_provider.cpp  communication_provider_impl.cpp  process_communicator_impl.cpp  softbus_adapter_standard.cpp
frameworks/innerkitsimpl/test/fuzztest/objectstore_fuzzer/: BUILD.gn
frameworks/innerkitsimpl/test/unittest/: BUILD.gn  object_store_test.cpp
frameworks/jskitsimpl/include/adaptor/: js_common.h  js_distributedobject.h  js_distributedobjectstore.h  js_notifier_impl.h  js_object_wrapper.h  js_watcher.h  notifier_impl.h
frameworks/jskitsimpl/include/common/: js_util.h  napi_queue.h  uv_queue.h
frameworks/jskitsimpl/src/adaptor/: js_distributedobject.cpp  js_distributedobjectstore.cpp  js_module_init.cpp  js_notifier_impl.cpp  js_object_wrapper.cpp  js_watcher.cpp  notifier_impl.cpp
frameworks/jskitsimpl/src/common/: js_util.cpp  napi_queue.cpp  uv_queue.cpp
frameworks/jskitsimpl/src/test/unittest/src/: BUILD.gn  ObjectStoreJsunit.test.js
frameworks/src/object/: flat_object_store.cpp
interfaces/innerkits/: BUILD.gn  distributed_object.h  distributed_objectstore.h  objectstore_errors.h
interfaces/jskits/: @ohos.data.distributeddataobject.d.ts  BUILD.gn  distributed_data_object.js
samples/distributedNotepad/: ReadMe.md
samples/distributedNotepad/entry/src/main/: config.json
samples/distributedNotepad/entry/src/main/js/MainAbility/pages/index/: index.js
samples/distributedNotepad/entry/src/main/js/model/: DistributedDataModel.js
samples/distributedPainter/: ReadMe.md  build.gradle
samples/distributedPainter/entry/: build.gradle
samples/distributedPainter/entry/src/main/js/MainAbility/pages/index/: index.js
samples/distributedPainter/entry/src/main/js/model/: DistributedDataModel.js
