# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("//build/ohos.gni")

config("objectstore_config") {
  visibility = [ "//foundation/distributeddatamgr/objectstore:*" ]

  cflags = [ "-DHILOG_ENABLE" ]

  include_dirs = [
    "../../frameworks/innerkitsimpl/include/adaptor",
    "../../frameworks/innerkitsimpl/include/common",
    "../../frameworks/innerkitsimpl/include/communicator",
    "../../interfaces/innerkits",
    "//third_party/bounds_checking_function/include",
  ]
}

config("objectstore_public_config") {
  visibility = [ ":*" ]

  include_dirs = [ "." ]
}

ohos_shared_library("distributeddataobject_impl") {
  part_name = "distributeddataobject"
  sources = [
    "../../frameworks/innerkitsimpl/src/adaptor/client_adaptor.cpp",
    "../../frameworks/innerkitsimpl/src/adaptor/distributed_object_impl.cpp",
    "../../frameworks/innerkitsimpl/src/adaptor/distributed_object_store_impl.cpp",
    "../../frameworks/innerkitsimpl/src/adaptor/flat_object_storage_engine.cpp",
    "../../frameworks/innerkitsimpl/src/adaptor/flat_object_store.cpp",
    "../../frameworks/innerkitsimpl/src/adaptor/object_callback.cpp",
    "../../frameworks/innerkitsimpl/src/communicator/app_device_handler.cpp",
    "../../frameworks/innerkitsimpl/src/communicator/app_pipe_handler.cpp",
    "../../frameworks/innerkitsimpl/src/communicator/app_pipe_mgr.cpp",
    "../../frameworks/innerkitsimpl/src/communicator/ark_communication_provider.cpp",
    "../../frameworks/innerkitsimpl/src/communicator/communication_provider.cpp",
    "../../frameworks/innerkitsimpl/src/communicator/communication_provider_impl.cpp",
    "../../frameworks/innerkitsimpl/src/communicator/process_communicator_impl.cpp",
    "../../frameworks/innerkitsimpl/src/communicator/softbus_adapter_standard.cpp",
  ]

  configs = [ ":objectstore_config" ]

  deps = [
    "//foundation/distributeddatamgr/distributeddatamgr/services/distributeddataservice/libs/distributeddb:distributeddb",
    "//third_party/bounds_checking_function:libsec_static",
    "//third_party/libuv:uv",
    "//utils/native/base:utils",
  ]
  external_deps = [
    "distributeddatamgr:distributeddata_inner",
    "dsoftbus_standard:softbus_client",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
    "samgr_standard:samgr_proxy",
  ]
  public_configs = [ ":objectstore_public_config" ]
  relative_install_dir = "module/data"
  subsystem_name = "distributeddataobject"
}
